--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,38 @@
 body {
   margin: 0;
   font-family: 'Open Sans', sans-serif;
+  overflow: hidden;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding: 12px;
+  background-color: rgb(14, 29, 67);
+  color: #fffd;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 100;
+}
+
+.header h1 {
+  font-size: 24px;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+
+.satellite-icon {
+  color: rgb(22, 96, 255);
+}
+
+.header-sub {
+  font-size: 16px;
+  font-weight: lighter;
 }
 
 .map {
